--- a/HW2_20200216_01.ipynb
+++ b/HW2_20200216_01.ipynb
@@ -10,16 +10,16 @@
     }
    },
    "source": [
-    "Code for HW2 APM598\n",
-    "Author: Jieshu Wang (jwang490@asu.edu)\n",
-    "Feb 2020\n",
-    "need to import HW2_util.py"
+    "- Code for HW2 APM598\n",
+    "- Author: Jieshu Wang (jwang490@asu.edu)\n",
+    "- Feb 2020\n",
+    "- need to import HW2_util.py"
    ]
   },
   {
    "cell_type": "markdown",
    "source": [
-    "Ex 1. a) Two-layer NN with four data points"
+    "- Ex 1. a) Two-layer NN with four data points"
    ],
    "metadata": {
     "collapsed": false,
@@ -89,10 +89,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Ex 1. a) continue:\n",
-    "\n",
-    "Plot the loss and accuracy\n",
-    "Print the good parameters that perform at least 90% accurate"
+    "- Ex 1. a) continue:\n",
+    "    - Plot the loss and accuracy\n",
+    "    - Print the good parameters that perform at least 90% accurate"
    ],
    "metadata": {
     "collapsed": false,
@@ -173,7 +172,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Ex 1. b) Two-layer NN with many data points"
+    "- Ex 1. b) Two-layer NN with many data points"
    ],
    "metadata": {
     "collapsed": false,
@@ -243,10 +242,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Ex 1. b) continue:\n",
-    "\n",
-    "Plot the loss and accuracy\n",
-    "Print the good parameters that perform at least 90% accurate"
+    "- Ex 1. b) continue:\n",
+    "    - Plot the loss and accuracy\n",
+    "    - Print the good parameters that perform at least 90% accurate"
    ],
    "metadata": {
     "collapsed": false,
@@ -325,8 +323,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Ex 3. CNN with Fashion-MNIST dataset\n",
-    "the best accuracy on test set is 0.9726"
+    "- Ex 3. CNN with Fashion-MNIST dataset\n",
+    "    - the best accuracy on test set is _0.9726_"
    ],
    "metadata": {
     "collapsed": false,
@@ -388,8 +386,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Ex 3. continue:\n",
-    "Plot the loss and accuracy"
+    "- Ex 3. continue:\n",
+    "    - Plot the loss and accuracy"
    ],
    "metadata": {
     "collapsed": false,
