--- a/HW2_20200216_01.ipynb
+++ b/HW2_20200216_01.ipynb
@@ -10,7 +10,7 @@
     }
    },
    "source": [
-    "- Code for HW2 APM598\n",
+    "# Code for HW2 APM598\n",
     "- Author: Jieshu Wang (jwang490@asu.edu)\n",
     "- Feb 2020\n",
     "- need to import HW2_util.py"
@@ -19,7 +19,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "- Ex 1. a) Two-layer NN with four data points"
+    "## Ex 1. a) Two-layer NN with four data points"
    ],
    "metadata": {
     "collapsed": false,
@@ -323,8 +323,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "- Ex 3. CNN with Fashion-MNIST dataset\n",
-    "    - the best accuracy on test set is _0.9726_"
+    "## Ex 3. CNN with Fashion-MNIST dataset\n",
+    "- the best accuracy on test set is ___0.9726___"
    ],
    "metadata": {
     "collapsed": false,
