--- a/HW2_20200216_01.ipynb
+++ b/HW2_20200216_01.ipynb
@@ -13,6 +13,7 @@
     "# Code for HW2 APM598\n",
     "- Author: Jieshu Wang (jwang490@asu.edu)\n",
     "- Feb 2020\n",
+    "- Two-layer linear neural networks and CNN (Convolutional Neural Networks)\n",
     "- need to import HW2_util.py"
    ]
   },
