--- a/HW2_20200216_01.ipynb
+++ b/HW2_20200216_01.ipynb
@@ -90,9 +90,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "- Ex 1. a) continue:\n",
-    "    - Plot the loss and accuracy\n",
-    "    - Print the good parameters that perform at least 90% accurate"
+    "## Ex 1. a) continue:\n",
+    "- Plot the loss and accuracy\n",
+    "- Print the good parameters that perform at least 90% accurate"
    ],
    "metadata": {
     "collapsed": false,
@@ -173,7 +173,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "- Ex 1. b) Two-layer NN with many data points"
+    "## Ex 1. b) Two-layer NN with many data points"
    ],
    "metadata": {
     "collapsed": false,
@@ -243,9 +243,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "- Ex 1. b) continue:\n",
-    "    - Plot the loss and accuracy\n",
-    "    - Print the good parameters that perform at least 90% accurate"
+    "## Ex 1. b) continue:\n",
+    "- Plot the loss and accuracy\n",
+    "- Print the good parameters that perform at least 90% accurate"
    ],
    "metadata": {
     "collapsed": false,
@@ -387,8 +387,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "- Ex 3. continue:\n",
-    "    - Plot the loss and accuracy"
+    "## Ex 3. continue:\n",
+    "- Plot the loss and accuracy"
    ],
    "metadata": {
     "collapsed": false,
