vanilla recurrent nerual networks

--- a/HW3_20200306.ipynb
+++ b/HW3_20200306.ipynb
@@ -250,12 +250,121 @@
    "cell_type": "markdown",
    "source": [
     "# 2. Recurrent Neural Networks\n",
-    "## Ex 2. "
+    "## Ex 2. \n",
+    "### Ex 2. a) find the output y1, . . . , y5 and deduce the predicted characters"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "the output y1, . . . , y5 and deduce the predicted characters\n",
+      "--- y_0---\n",
+      "    input: h\n",
+      "    output: h\n",
+      "--- y_1---\n",
+      "    input: e\n",
+      "    output: e\n",
+      "--- y_2---\n",
+      "    input: l\n",
+      "    output: l\n",
+      "--- y_3---\n",
+      "    input: l\n",
+      "    output: l\n",
+      "--- y_4---\n",
+      "    input: o\n",
+      "    output: o\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "from HW3_util import ModuleParamsVanillaRNN, VanillaRNN, letter_to_tensor\n",
+    "import torch\n",
+    "import torch.nn.functional as F\n",
+    "\n",
+    "a_ex2a = torch.tensor([[1.0, -1.0, -0.5, 0.5],\n",
+    "                       [1.0, 1.0, -0.5, -1]])\n",
+    "r_ex2a = torch.tensor([[1.0, 0.0],\n",
+    "                      [0.0, 1.0]])\n",
+    "b_ex2a = torch.tensor([[1.0, 1.0],\n",
+    "                       [0.5, 1.0],\n",
+    "                       [-1.0, 0.0],\n",
+    "                       [0.0, -0.5]])\n",
+    "all_letters_ex2a = 'helo'\n",
+    "input_letter_list = ['h', 'e', 'l', 'l', 'o']\n",
+    "\n",
+    "class VanillaRNNEx2a(VanillaRNN):\n",
+    "    def __init__(self, module_params: ModuleParamsVanillaRNN):\n",
+    "        super(VanillaRNNEx2a, self).__init__(module_params)\n",
+    "        with torch.no_grad():\n",
+    "            self._A.weight.data = a_ex2a\n",
+    "            self._A.bias.data.fill_(0)\n",
+    "            self._R.weight.data = r_ex2a\n",
+    "            self._R.bias.data.fill_(0)\n",
+    "            self._B.weight.data = b_ex2a\n",
+    "            self._B.bias.data.fill_(0)\n",
+    "\n",
+    "def predict_characters_ex2a(input_list: list, all_letters: str):\n",
+    "    vanilla_rnn_params = ModuleParamsVanillaRNN(all_letters_base=all_letters_ex2a,)\n",
+    "    my_vanilla_rnn_ex2a = VanillaRNNEx2a(vanilla_rnn_params)\n",
+    "    h = my_vanilla_rnn_ex2a.init_hidden()\n",
+    "    for i in range(len(input_list)):\n",
+    "        input = input_list[i]\n",
+    "        print(f'--- y_{i}---')\n",
+    "        x = letter_to_tensor(input, all_letters)\n",
+    "        y, h = my_vanilla_rnn_ex2a(x, h)\n",
+    "        predicted_character = all_letters[y.argmax()]\n",
+    "        print(f\"    input: {input}\")\n",
+    "        print(f'    output: {predicted_character}')\n",
+    "\n",
+    "print('the output y1, . . . , y5 and deduce the predicted characters')\n",
+    "predict_characters_ex2a(input_letter_list, all_letters_ex2a)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Ex 2. b) Find matrices A, R, B such that the predicted characters are ”olleh”."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from HW3_util import VanillaRNNTrainer\n",
+    "\n",
+    "module_params_ex2b = ModuleParamsVanillaRNN(all_letters_base=all_letters_ex2a)\n",
+    "module_ex2b = VanillaRNN(module_params_ex2b)\n",
+    "training_text \n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
     }
    }
   }
