--- a/HW3_20200306.ipynb
+++ b/HW3_20200306.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "outputs": [
     {
      "name": "stdout",
@@ -75,7 +75,7 @@
    "source": [
     "# Tokenize words\n",
     "import nltk\n",
-    "# nltk.data.path.append(\"/Users/Jieshu/PycharmProjects/APM598_Deep_Neural_Networks/APM598_notebook4/nltk_data\")\n",
+    "nltk.data.path.append(\"/Users/Jieshu/PycharmProjects/APM598_Deep_Neural_Networks/APM598_notebook4/nltk_data\")\n",
     "\n",
     "my_text_tokenized = nltk.word_tokenize(my_text)\n",
     "print(my_text_tokenized[0:10])\n",
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
@@ -268,28 +268,34 @@
      "name": "stdout",
      "text": [
       "the output y1, . . . , y5 and deduce the predicted characters\n",
-      "--- y_0---\n",
+      "--- 0---\n",
       "    input: h\n",
+      "    y_1: tensor([[0.5170, 0.3533, 0.0526, 0.0770]], grad_fn=<SoftmaxBackward>)\n",
       "    output: h\n",
-      "--- y_1---\n",
+      "--- 1---\n",
       "    input: e\n",
+      "    y_2: tensor([[0.3275, 0.3681, 0.2037, 0.1006]], grad_fn=<SoftmaxBackward>)\n",
       "    output: e\n",
-      "--- y_2---\n",
+      "--- 2---\n",
       "    input: l\n",
+      "    y_3: tensor([[0.1762, 0.2410, 0.4063, 0.1765]], grad_fn=<SoftmaxBackward>)\n",
       "    output: l\n",
-      "--- y_3---\n",
+      "--- 3---\n",
       "    input: l\n",
+      "    y_4: tensor([[0.0949, 0.1423, 0.5210, 0.2418]], grad_fn=<SoftmaxBackward>)\n",
       "    output: l\n",
-      "--- y_4---\n",
+      "--- 4---\n",
       "    input: o\n",
-      "    output: o\n"
+      "    y_5: tensor([[0.0940, 0.1092, 0.3790, 0.4178]], grad_fn=<SoftmaxBackward>)\n",
+      "    output: o\n",
+      "Predicted characters are: ['h', 'e', 'l', 'l', 'o']\n"
      ],
      "output_type": "stream"
     }
    ],
    "source": [
-    "from HW3_util import ModuleParamsVanillaRNN, VanillaRNN, letter_to_tensor\n",
-    "import torch\n",
+    "from HW3_util import ModuleParamsVanillaRNN, VanillaRNN, letter_to_tensor, torch\n",
+    "\n",
     "import torch.nn.functional as F\n",
     "\n",
     "a_ex2a = torch.tensor([[1.0, -1.0, -0.5, 0.5],\n",
@@ -315,17 +321,21 @@
     "            self._B.bias.data.fill_(0)\n",
     "\n",
     "def predict_characters_ex2a(input_list: list, all_letters: str):\n",
-    "    vanilla_rnn_params = ModuleParamsVanillaRNN(all_letters_base=all_letters_ex2a,)\n",
+    "    vanilla_rnn_params = ModuleParamsVanillaRNN(all_letters_base=all_letters)\n",
     "    my_vanilla_rnn_ex2a = VanillaRNNEx2a(vanilla_rnn_params)\n",
     "    h = my_vanilla_rnn_ex2a.init_hidden()\n",
+    "    predicted_charaters_list = []\n",
     "    for i in range(len(input_list)):\n",
     "        input = input_list[i]\n",
-    "        print(f'--- y_{i}---')\n",
+    "        print(f'--- {i}---')\n",
     "        x = letter_to_tensor(input, all_letters)\n",
     "        y, h = my_vanilla_rnn_ex2a(x, h)\n",
     "        predicted_character = all_letters[y.argmax()]\n",
     "        print(f\"    input: {input}\")\n",
+    "        print(f'    y_{i+1}: {y}')\n",
     "        print(f'    output: {predicted_character}')\n",
+    "        predicted_charaters_list.append(predicted_character)\n",
+    "    print(f'Predicted characters are: {predicted_charaters_list}')\n",
     "\n",
     "print('the output y1, . . . , y5 and deduce the predicted characters')\n",
     "predict_characters_ex2a(input_letter_list, all_letters_ex2a)"
@@ -358,8 +368,7 @@
     "from HW3_util import VanillaRNNTrainer\n",
     "\n",
     "module_params_ex2b = ModuleParamsVanillaRNN(all_letters_base=all_letters_ex2a)\n",
-    "module_ex2b = VanillaRNN(module_params_ex2b)\n",
-    "training_text \n"
+    "module_ex2b = VanillaRNN(module_params_ex2b)"
    ],
    "metadata": {
     "collapsed": false,
@@ -371,9 +380,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "name": "python3",
    "language": "python",
-   "name": "python3"
+   "display_name": "Python 3"
   },
   "language_info": {
    "codemirror_mode": {
