RRN predict "olleh" from "hello"

--- a/HW3_20200306.ipynb
+++ b/HW3_20200306.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "outputs": [
     {
      "name": "stdout",
@@ -314,11 +314,11 @@
     "        super(VanillaRNNEx2a, self).__init__(module_params)\n",
     "        with torch.no_grad():\n",
     "            self._A.weight.data = a_ex2a\n",
-    "            self._A.bias.data.fill_(0)\n",
+    "            # self._A.bias.data.fill_(0)\n",
     "            self._R.weight.data = r_ex2a\n",
-    "            self._R.bias.data.fill_(0)\n",
+    "            # self._R.bias.data.fill_(0)\n",
     "            self._B.weight.data = b_ex2a\n",
-    "            self._B.bias.data.fill_(0)\n",
+    "            # self._B.bias.data.fill_(0)\n",
     "\n",
     "def predict_characters_ex2a(input_list: list, all_letters: str):\n",
     "    vanilla_rnn_params = ModuleParamsVanillaRNN(all_letters_base=all_letters)\n",
@@ -351,7 +351,10 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Ex 2. b) Find matrices A, R, B such that the predicted characters are ”olleh”."
+    "### Ex 2. b) Find matrices A, R, B such that the predicted characters are ”olleh”.\n",
+    "- A.weight: [[-1.6251, -0.6183,  0.7184,  1.0523], [-1.5250, -0.3831,  1.4286, -0.9764]]\n",
+    "- R.weight: [[ 2.6304,  1.8039], [-1.3376, -0.0809]]\n",
+    "- B.weight: [[ 2.6276, -1.8918], [ 2.9543,  2.2045], [-2.1664,  2.6917], [-1.7653, -2.3543]]"
    ],
    "metadata": {
     "collapsed": false,
@@ -362,18 +365,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 1,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "  input = hello\n",
+      "  output = ooooo\n",
+      "loss at step 0: 1.391243076324463\n",
+      "  input = hello\n",
+      "  output = ooeeh\n",
+      "loss at step 60: 1.3292919158935548\n",
+      "  input = hello\n",
+      "  output = olheh\n",
+      "loss at step 120: 1.1782100677490235\n",
+      "  input = hello\n",
+      "  output = olleh\n",
+      "loss at step 180: 1.0148378372192384\n",
+      "  input = hello\n",
+      "  output = olleh\n",
+      "loss at step 240: 0.873841381072998\n",
+      "  input = hello\n",
+      "  output = olleh\n",
+      "loss at step 300: 0.827212905883789\n",
+      "  input = hello\n",
+      "  output = olleh\n",
+      "loss at step 360: 0.8035863876342774\n",
+      "  input = hello\n",
+      "  output = olleh\n",
+      "loss at step 420: 0.7893017292022705\n",
+      "  input = hello\n",
+      "  output = olleh\n",
+      "loss at step 480: 0.779842472076416\n",
+      "  input = hello\n",
+      "  output = olleh\n",
+      "loss at step 540: 0.7731913566589356\n",
+      "<generator object Module.parameters at 0x132e26750>\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
    "source": [
-    "from HW3_util import VanillaRNNTrainer\n",
+    "from HW3_util import VanillaRNNTrainer, VanillaRNN, ModuleParamsVanillaRNN\n",
     "\n",
-    "module_params_ex2b = ModuleParamsVanillaRNN(all_letters_base=all_letters_ex2a)\n",
-    "module_ex2b = VanillaRNN(module_params_ex2b)"
+    "all_letters_ex2b = 'helo'\n",
+    "training_x_ex2b = 'hello'\n",
+    "training_y_ex2b = 'olleh'\n",
+    "module_params_ex2b = ModuleParamsVanillaRNN(all_letters_base=all_letters_ex2b, chunk_size=5,\n",
+    "                                            is_print_training=True, n_steps=600, printing_step=60)\n",
+    "trainer_ex2b = VanillaRNNTrainer(module_params=module_params_ex2b, module=VanillaRNN,\n",
+    "                                 training_x=training_x_ex2b, training_y=training_y_ex2b)\n",
+    "print(trainer_ex2b.model.parameters())"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "_A.weight\n",
+      "    Parameter containing:\n",
+      "tensor([[-1.6251, -0.6183,  0.7184,  1.0523],\n",
+      "        [-1.5250, -0.3831,  1.4286, -0.9764]], requires_grad=True)\n",
+      "_R.weight\n",
+      "    Parameter containing:\n",
+      "tensor([[ 2.6304,  1.8039],\n",
+      "        [-1.3376, -0.0809]], requires_grad=True)\n",
+      "_B.weight\n",
+      "    Parameter containing:\n",
+      "tensor([[ 2.6276, -1.8918],\n",
+      "        [ 2.9543,  2.2045],\n",
+      "        [-2.1664,  2.6917],\n",
+      "        [-1.7653, -2.3543]], requires_grad=True)\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "result_model_parameters = trainer_ex2b.model.named_parameters()\n",
+    "for name, params in result_model_parameters:\n",
+    "    print(f'{name}')\n",
+    "    print(f'{params}')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Ex 3. vanishing/exploding gradient\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
     }
    }
   }
