--- a/HW3_20200306.ipynb
+++ b/HW3_20200306.ipynb
@@ -233,7 +233,7 @@
     "        prob = n_x_1_2/n_x_1\n",
     "        product *= prob**(-1/(corpus_length-1))\n",
     "    perplexity = product\n",
-    "    return  perplexity\n",
+    "    return perplexity\n",
     "\n",
     "print(\"The perplexity of Plato's Republic is: \")\n",
     "print(compute_perplexity(my_text))"
@@ -481,13 +481,21 @@
      "name": "stdout",
      "text": [
       "The difference is \n",
-      "              perturbation  perturbation_log  y_difference  y_difference_log\n",
-      "1.000000e-04  1.000000e-04              -4.0      1.213693          0.084109\n",
-      "1.000000e-05  1.000000e-05              -5.0      1.128870          0.052644\n",
-      "1.000000e-06  1.000000e-06              -6.0      0.265372         -0.576146\n",
-      "1.000000e-07  1.000000e-07              -7.0      0.027112         -1.566843\n",
-      "1.000000e-08  1.000000e-08              -8.0      0.002712         -2.566748\n",
-      "1.000000e-09  1.000000e-09              -9.0      0.000271         -3.566747\n"
+      "              perturbation  perturbation_log  y_difference  y_difference_log  \\\n",
+      "1.000000e-04  1.000000e-04              -4.0      1.213693          0.084109   \n",
+      "1.000000e-05  1.000000e-05              -5.0      1.128870          0.052644   \n",
+      "1.000000e-06  1.000000e-06              -6.0      0.265372         -0.576146   \n",
+      "1.000000e-07  1.000000e-07              -7.0      0.027112         -1.566843   \n",
+      "1.000000e-08  1.000000e-08              -8.0      0.002712         -2.566748   \n",
+      "1.000000e-09  1.000000e-09              -9.0      0.000271         -3.566747   \n",
+      "\n",
+      "                     eq_2  \n",
+      "1.000000e-04  1862645.625  \n",
+      "1.000000e-05  1862645.625  \n",
+      "1.000000e-06  1862645.625  \n",
+      "1.000000e-07  1862645.625  \n",
+      "1.000000e-08  1862645.625  \n",
+      "1.000000e-09  1862645.625  \n"
      ],
      "output_type": "stream"
     },
@@ -578,13 +586,21 @@
      "name": "stdout",
      "text": [
       "The difference is \n",
-      "              perturbation  perturbation_log  y_difference y_difference_log\n",
-      "1.000000e-04  1.000000e-04              -4.0           0.0               -∞\n",
-      "1.000000e-05  1.000000e-05              -5.0           0.0               -∞\n",
-      "1.000000e-06  1.000000e-06              -6.0           0.0               -∞\n",
-      "1.000000e-07  1.000000e-07              -7.0           0.0               -∞\n",
-      "1.000000e-08  1.000000e-08              -8.0           0.0               -∞\n",
-      "1.000000e-09  1.000000e-09              -9.0           0.0               -∞\n"
+      "              perturbation  perturbation_log  y_difference y_difference_log  \\\n",
+      "1.000000e-04  1.000000e-04              -4.0           0.0               -∞   \n",
+      "1.000000e-05  1.000000e-05              -5.0           0.0               -∞   \n",
+      "1.000000e-06  1.000000e-06              -6.0           0.0               -∞   \n",
+      "1.000000e-07  1.000000e-07              -7.0           0.0               -∞   \n",
+      "1.000000e-08  1.000000e-08              -8.0           0.0               -∞   \n",
+      "1.000000e-09  1.000000e-09              -9.0           0.0               -∞   \n",
+      "\n",
+      "                      eq_2  \n",
+      "1.000000e-04  9.375501e-09  \n",
+      "1.000000e-05  9.375501e-09  \n",
+      "1.000000e-06  9.375501e-09  \n",
+      "1.000000e-07  9.375501e-09  \n",
+      "1.000000e-08  9.375501e-09  \n",
+      "1.000000e-09  9.375501e-09  \n"
      ],
      "output_type": "stream"
     },
@@ -647,19 +663,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
      "text": [
       "The difference is \n",
-      "              perturbation  perturbation_log  y_difference  y_difference_log\n",
-      "1.000000e-04  1.000000e-04              -4.0  1.317089e-13        -12.880385\n",
-      "1.000000e-05  1.000000e-05              -5.0  1.317089e-14        -13.880385\n",
-      "1.000000e-06  1.000000e-06              -6.0  1.317089e-15        -14.880385\n",
-      "1.000000e-07  1.000000e-07              -7.0  1.317089e-16        -15.880385\n",
-      "1.000000e-08  1.000000e-08              -8.0  1.317089e-17        -16.880385\n",
-      "1.000000e-09  1.000000e-09              -9.0  1.317089e-18        -17.880385\n"
+      "              perturbation  perturbation_log  y_difference  y_difference_log  \\\n",
+      "1.000000e-04  1.000000e-04              -4.0  1.317089e-13        -12.880385   \n",
+      "1.000000e-05  1.000000e-05              -5.0  1.317089e-14        -13.880385   \n",
+      "1.000000e-06  1.000000e-06              -6.0  1.317089e-15        -14.880385   \n",
+      "1.000000e-07  1.000000e-07              -7.0  1.317089e-16        -15.880385   \n",
+      "1.000000e-08  1.000000e-08              -8.0  1.317089e-17        -16.880385   \n",
+      "1.000000e-09  1.000000e-09              -9.0  1.317089e-18        -17.880385   \n",
+      "\n",
+      "                     eq_2  \n",
+      "1.000000e-04  1862645.625  \n",
+      "1.000000e-05  1862645.625  \n",
+      "1.000000e-06  1862645.625  \n",
+      "1.000000e-07  1862645.625  \n",
+      "1.000000e-08  1862645.625  \n",
+      "1.000000e-09  1862645.625  \n"
      ],
      "output_type": "stream"
     },
