--- a/HW3_20200306.ipynb
+++ b/HW3_20200306.ipynb
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
@@ -618,9 +618,6 @@
    "source": [
     "from HW3_util import compute_y_difference, torch\n",
     "\n",
-    "# def pertubating_x_ex3c(perturbation):\n",
-    "#     return torch.tensor([2.0+perturbation, 1.0-perturbation])\n",
-    "\n",
     "x_1_ex3c = torch.tensor([2.0, 1.0])\n",
     "x_n_ex3c = torch.tensor([0.0, 0.0])\n",
     "h_n_ex3c = torch.tensor([0.0, 0.0])\n",
@@ -633,6 +630,7 @@
     "plt.figure(1)\n",
     "plt.clf()\n",
     "plt.plot(df_ex3c['perturbation_log'], df_ex3c['y_difference'], '-o')\n",
+    "# plt.plot(df_ex3b['perturbation_log'], df_ex3b['y_difference'], '-o', color='r')\n",
     "plt.grid()\n",
     "plt.xlabel('log of perturbations')\n",
     "plt.ylabel('norm of y difference')\n",
@@ -663,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "outputs": [
     {
      "name": "stdout",
@@ -699,14 +697,14 @@
     }
    ],
    "source": [
-    "def pertubating_x_ex3_extra(x, perturbation):\n",
+    "def perturbating_x_ex3_extra(x, perturbation):\n",
     "    return x + torch.tensor([perturbation, perturbation])\n",
     "\n",
     "x_1_ex3_extra = torch.tensor([0.0, 0.0])\n",
     "x_n_ex3_extra = torch.tensor([0.0, 0.0])\n",
     "h_n_ex3_extra = torch.tensor([0.0, 0.0])\n",
     "\n",
-    "df_ex3_extra = compute_y_difference(30, x_1_ex3_extra, x_n_ex3_extra, h_n_ex3_extra, pertubating_x_ex3_extra, \n",
+    "df_ex3_extra = compute_y_difference(30, x_1_ex3_extra, x_n_ex3_extra, h_n_ex3_extra, perturbating_x_ex3_extra, \n",
     "                               perturbation_values_ex3, VanillaRNNEx3b, module_params_ex3b, precision=10)\n",
     "print(f'The difference is \\n{df_ex3_extra}')\n",
     "\n",
